crates/glyde-core/src/ingest/snapshots/glyde_core__ingest__report__tests__inference_report_case_01_comma_clean.snap
---
source: crates/glyde-core/src/ingest/report.rs
expression: report
---
InferenceReport {
    encoding: InferredField {
        value: "utf-8",
        confidence: High,
    },
    delimiter: InferredField {
        value: Some(
            ",",
        ),
        confidence: High,
    },
    decimal_separator: InferredField {
        value: Some(
            ".",
        ),
        confidence: High,
    },
    time_column: InferredField {
        value: Some(
            "timestamp",
        ),
        confidence: High,
    },
    timestamp_format: InferredField {
        value: Some(
            "iso8601",
        ),
        confidence: High,
    },
    sample_count: 6,
    sampling_class: Uniform,
    skipped_row_count: 0,
    skipped_row_details: [],
}
